# Computer-Graphics

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  compile_commands.json
Vetroscope/: do_pw1.sh  pw1.py
Vetroscope/ForVetroscope/: OutVetroscope4.tif
include/: color_range.hpp  model.hpp  result.hpp  samples.hpp  shapes.hpp  util.hpp
src/: model.cpp  samples.cpp  shapes.cpp  util.cpp
src/targets/: lighting.cpp  lighting_model.cpp  lines.cpp  mandelbrot.cpp  opengl_fog.cpp  opengl_objects.cpp  rotation.cpp  triangles.cpp
